[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-aipm"
version = "1.0.0"
description = "AI Product Manager Environment - OpenEnv hackathon submission"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Kavya", email = "kavya@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "api.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]

[project.urls]
GitHub = "https://github.com/KavyaBS123/AIPM"
"Hugging Face Space" = "https://huggingface.co/spaces/kavya25/openenv-aipm"

[tool.setuptools]
packages = ["pm_env", "scenarios", "api"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
